--- a/src/index.html
+++ b/src/index.html
@@ -682,11 +682,11 @@
                 </div>
                 <div class="col col-sm-4">
                   <div class="btn-group" data-toggle="buttons">
-                    <label class="radioBtn btn btn-lg" data-bind="css: { 'btn-success': donationCurrency() == 'BTC' }">
-                      <input type="radio" name="donationCurrency" value="BTC" data-bind="btnGroupChecked: donationCurrency">BTC
+                    <label class="radioBtn btn btn-lg" data-bind="css: { 'btn-success': donationCurrency() == BTC }, text: BTC">
+                      <input type="radio" name="donationCurrency" data-bind="btnGroupChecked: donationCurrency, attr: { value: BTC}">
                     </label>
-                    <label class="radioBtn btn btn-lg" data-bind="css: { 'btn-success': donationCurrency() == 'XCP' }">
-                      <input type="radio" name="donationCurrency" value="XCP" data-bind="btnGroupChecked: donationCurrency">XCP
+                    <label class="radioBtn btn btn-lg" data-bind="css: { 'btn-success': donationCurrency() == XCP }, text: XCP">
+                      <input type="radio" name="donationCurrency" data-bind="btnGroupChecked: donationCurrency, attr: { value: XCP}">
                     </label>
                   </div>
                 </div>
