--- a/src/pages/leaderboard.html
+++ b/src/pages/leaderboard.html
@@ -7,10 +7,10 @@
       <h2 data-bind="locale: 'market'"></h2>
       <div class="btn-group" data-toggle="buttons">
           <label class="btn btn-primary active" data-bind="click: showPortfolioInXCP">
-            <input type="radio" name="options" id="xcpMarket"> <i class="fa fa-times"></i>&nbsp;XCP
+            <input type="radio" name="options" id="xcpMarket"> <i class="fa fa-times"></i>&nbsp;<span data-bind="text: XCP"></span>
           </label>
           <label class="btn btn-primary" data-bind="click: showPortfolioInBTC">
-            <input type="radio" name="options" id="btcMarket"> <i class="fa fa-btc"></i>&nbsp;BTC
+            <input type="radio" name="options" id="btcMarket"> <i class="fa fa-btc"></i>&nbsp;<span data-bind="text: BTC"></span>
           </label>
       </div>                
     </div>
