--- a/src/pages/feed_btcpays.html
+++ b/src/pages/feed_btcpays.html
@@ -5,7 +5,7 @@
           <i class="fa fa-fw fa-exclamation fa-2x"></i>
         </em>
         <span>
-           <span data-bind="locale: 'payment_required_for_matched_order', localeArgs:{0:dispBTCQuantity, 1:dispMyAddr, 2:dispMyOrderTxHash}"></span>
+           <span data-bind="locale: 'payment_required_for_matched_order', localeArgs:{0:dispBTCQuantity, 1:BTC, 2:dispMyAddr, 3:dispMyOrderTxHash}"></span>
            <div class="clearfix"></div>
            <span class="pull-right"><button class="btn btn-xs btn-success margin-top-5" data-bind="click: completeBTCPay, locale: 'pay_now'"></button></span>
            <span class="pull-left font-xs text-muted"><i data-bind="locale:'expire_in', localeArgs: {0: approxExpiresInTimeDisp, 1: MATCH_EXPIRE_INDEX}"></i></span>
@@ -19,7 +19,7 @@
         <em class="bg-color-lighten padding-5 no-border-radius pull-left margin-right-5">
           <i class="fa fa-fw fa-clock-o fa-2x"></i>
         </em>
-        <span data-bind="locale: 'blocks_left_until_btcpay', localeArgs: {0: numBlocksUntilEligible, 1: approxTimeUntilEligibleDisp, 2: dispMyOrderTxHash, 3:dispBTCQuantity}"></span>
+        <span data-bind="locale: 'blocks_left_until_btcpay', localeArgs: {0: numBlocksUntilEligible, 1: approxTimeUntilEligibleDisp, 2: dispMyOrderTxHash, 3:dispBTCQuantity, 4:BTC}"></span>
       </span>
     </li>
 </ul>
