--- a/src/pages/balances.html
+++ b/src/pages/balances.html
@@ -1057,7 +1057,7 @@
           <section data-bind="visible: extImageURL"><div class="row">
             <label class="control-label col col-sm-2" data-bind="locale: 'logo'"></label>
             <div class="col col-sm-10">
-                <img data-bind="attr: {'src': extImageURL}" /> <!-- should be 48x48 -->
+                <img alt="" data-bind="attr: {'src': extImageURL}" /> <!-- should be 48x48 -->
             </div>
           </div></section>
           <section data-bind="visible: extWebsite"><div class="row">
