--- a/src/pages/betting.html
+++ b/src/pages/betting.html
@@ -23,7 +23,7 @@
               <div class="widget-body" data-bind="validationOptions: { insertMessages: false }"> <!-- widget content -->
                 <div class="row">
                   <div class="col col-lg-1" data-bind="visible: info_data.valid_image" style="width:60px">
-                    <img data-bind="attr: {src: info_data.image_url}" />
+                    <img alt="" data-bind="attr: {src: info_data.image_url}" />
                   </div>
                   <div class="col col-lg-11">
                     
