--- a/src/pages/exchange.html
+++ b/src/pages/exchange.html
@@ -18,7 +18,7 @@
           <span data-bind="locale: 'all_markets'"></span>
         </a>
         <div class="pairTitle page-title txt-color-blueDark">
-          <img data-bind="attr: {src: baseAssetImage()}, visible: baseAssetImage()!=''" />
+          <img alt="" data-bind="attr: {src: baseAssetImage()}, visible: baseAssetImage()!=''" />
           <span data-bind="text: dispAssetPair"></span>
         </div>
         <span class="marketPrice" data-bind="visible: currentMarketPrice, html: currentMarketPrice + ' ' + marketProgression24hDisp"></span>
