--- a/src/pages/simplebuy.html
+++ b/src/pages/simplebuy.html
@@ -57,7 +57,7 @@
             <div class="widget-body vennd-machine"> <!-- widget content -->
 
               <a data-bind="attr: {href: url}" target="_blank">
-                <img data-bind="attr: {src: image}" style="width:100px" />
+                <img alt="*" data-bind="attr: {src: image}" style="width:100px" />
               </a>
               <a class="support" target="_blank" data-bind="attr: {href: supportlink}, locale: 'support'">Support</a>
 
