--- a/src/index.html
+++ b/src/index.html
@@ -327,16 +327,16 @@
               <div class="row">
 
                 <div class="col-sm-8" data-bind="visible: !cryptedPassphraseUsed()">
-                  <input id="password" data-bind="value: enteredPassphrase, valueUpdate: 'input', localeAttr: {'placeholder': 'enter_passphrase'}" class="form-control" type="password" name="password">
+                  <input aria-label="Enter your passphrase here." id="password" data-bind="value: enteredPassphrase, valueUpdate: 'input', localeAttr: {'placeholder': 'enter_passphrase'}" class="form-control" type="password" name="password">
                 </div>
 
                 <div class="col-sm-8" data-bind="visible: cryptedPassphraseUsed">
-                  <input id="passwordDecrypt" data-bind="value: passwordDecrypt, valueUpdate: 'input', localeAttr: {'placeholder': 'enter_quick_password'}" class="form-control" type="password" name="passwordDecrypt">
+                  <input aria-label="Enter your quick password here."  id="passwordDecrypt" data-bind="value: passwordDecrypt, valueUpdate: 'input', localeAttr: {'placeholder': 'enter_quick_password'}" class="form-control" type="password" name="passwordDecrypt">
                 </div>
 
                 <div class="col-sm-4" style="white-space:nowrap">
                   <button id="walletLoginButton" data-bind="click: openWallet, enable: isPassphraseValid(), css: { 'btn-primary': isPassphraseValid() }, locale: 'open_wallet'" type="button" class="btn btn-default" disabled></button>
-                  &nbsp;<button id="secureKeyboardButton" data-bind="click: showSecureKeyboard, enable: !isPassphraseValid(), css: { 'btn-primary': !isPassphraseValid() }" type="button" class="btn btn-default" disabled><i class="fa fa-keyboard-o"></i></button>
+                  &nbsp;<button aria-label="Press this if you want to use the secure keyboard." id="secureKeyboardButton" data-bind="click: showSecureKeyboard, enable: !isPassphraseValid(), css: { 'btn-primary': !isPassphraseValid() }" type="button" class="btn btn-default" disabled><i class="fa fa-keyboard-o"></i></button>
                   <div class="showSupport"><a href="#" data-bind="locale: 'login_problems'"></a></div>
                 </div>
 
