--- a/src/pages/simplebuy.html
+++ b/src/pages/simplebuy.html
@@ -56,10 +56,10 @@
 
             <div class="widget-body vennd-machine"> <!-- widget content -->
 
-              <a data-bind="attr: {href: url}" target="_blank">
+              <a data-bind="attr: {href: url}" target="_blank" rel="noopener noreferrer">
                 <img alt="*" data-bind="attr: {src: image}" style="width:100px" />
               </a>
-              <a class="support" target="_blank" data-bind="attr: {href: supportlink}, locale: 'support'">Support</a>
+              <a class="support" target="_blank" rel="noopener noreferrer" data-bind="attr: {href: supportlink}, locale: 'support'">Support</a>
 
               <div style="padding-left:120px">
                 <div class="row">
