--- a/src/pages/balances.html
+++ b/src/pages/balances.html
@@ -327,7 +327,7 @@
             <label class="control-label col col-sm-3" data-bind="locale: 'send_to'"></label>
             <div class="col col-sm-9">
                 <label class="input"><i class="icon-append fa fa-tag"></i>
-                    <input name="destAddress" data-bind="value: destAddress, valueUpdate: 'input', attr: {placeholder: 'Enter Bitcoin address'}" type="text"/>
+                    <input name="destAddress" data-bind="value: destAddress, valueUpdate: 'input', attr: {placeholder: 'Enter Monacoin address'}" type="text"/>
                 </label>
                 <span class="invalid" data-bind="validationMessage: destAddress"></span>
             </div>
@@ -464,7 +464,7 @@
             <label class="control-label col col-sm-12" data-bind="locale: 'private_key_import'"></label>
             <div class="col col-sm-12">
                 <label class="input"><i class="icon-append fa fa-lock"></i>
-                    <input name="privateKey" data-bind="value: privateKey, valueUpdate: 'input', attr: {placeholder: 'Enter Bitcoin private key'}" type="text"/>
+                    <input name="privateKey" data-bind="value: privateKey, valueUpdate: 'input', attr: {placeholder: 'Enter Monacoin private key'}" type="text"/>
                 </label>
                 <span class="invalid" data-bind="validationMessage: privateKey"></span>
                 <div class="note" data-bind="locale: 'enter_unencrypted_private_key'"></div>
@@ -502,7 +502,7 @@
             <label class="control-label col col-sm-12" data-bind="locale: 'private_key_pay_fees'"></label>
             <div class="col col-sm-12">
                 <label class="input"><i class="icon-append fa fa-lock"></i>
-                    <input name="privateKeyForFees" data-bind="value: privateKeyForFees, valueUpdate: 'input', attr: {placeholder: 'Enter Bitcoin private key'}" type="text"/>
+                    <input name="privateKeyForFees" data-bind="value: privateKeyForFees, valueUpdate: 'input', attr: {placeholder: 'Enter Monacoin private key'}" type="text"/>
                 </label>
                 <span class="invalid" data-bind="validationMessage: privateKeyForFees"></span>
                 <span class="note" data-bind="text: addressForFeesBalanceMessage, visible:addressForFeesBalanceMessage()!=''"></span>
